# experiments

./: .gitignore  LICENSE.txt  README.md
comptime/: Cargo.toml  x.trd
comptime/src/: ;  ast.rs  comptime.rs  comptime_error.rs  env.rs  eval_error.rs  expr.rs  heap.rs  interp.rs  lib.rs  main.rs  memory.rs  parse.rs  parser.rs  pretty_error.rs  pretty_print.rs  rt_error.rs  runtime.rs  runtime_error.rs  show_error.rs  stack.rs  type_check.rs  type_error.rs  value.rs
comptime/tests/: run_tests.rs  test_cases.trd  tests.rs
curves/: .gitignore  Cargo.toml  lindenmayer.py  save_curves.sh  save_moore_curves.sh  save_puzzle.sh
decision-theory/: README.md  cdt_agent.py  dilemma.py  dilemma.xsd  dt.py  dts.py  hitchhiker-dilemma.xml  hitchhiker_dilemma.xml  log.py  parse.py  simulate.py
decryptit/: Cargo.toml
factorio-planner/: Cargo.toml  README.md
generators/: .gitignore  Cargo.toml  README.md  enumerate.hs  gen.hs
hextile/: Cargo.toml
hextile/assets/raw/terrain/: README.md  points_mixed.tsv  points_pure.tsv  tiles_mixed.tsv  tiles_pure.tsv
hextile/src/: coord.rs  game.rs  lib.rs  system.rs  terrain.rs  tile.rs  tsv.rs  view.rs  window.rs  world.rs
lexer/: Cargo.toml  sample.json
nectar/: .gitignore  README.md  pyret-grammar.txt
opg/: Cargo.toml
parser-comp/: Cargo.toml  sample.json
parser-comp/src/: ll1.rs  main.rs  nomp.rs
parser-ll1/: Cargo.toml  parser_ll1_tests.vim
parser-ll1/examples/: json.rs
parser-ll1/src/: a.rs  b.rs  boilerplate.rs  first_set.rs  initial_set.rs  lexer.rs  lib.rs  other.rs  other2.rs  parse_error.rs  parser_recur.rs  seqs.rs  tuples.rs  vec_map.rs  x.rs  y.rs  z.rs
parser-ll1/tests/: json_test.rs  lexing.tests.txt  parser_test_cases.txt  parser_tests.rs  repetition.tests.txt  run_tests.rs
parser-strnom/: Cargo.toml
peg/: PEG.hs  README.md  build
pl/: Cargo.toml
pretty/: Cargo.toml
regex-impls/: Cargo.toml  README.md
stlc/: README.md  (+1 more)
tiling/: .gitignore  Cargo.toml  earth.md  notes.md
tiling/assets/: colors.xcf
tiling/assets/hexes/: debug.xcf  plain.xcf  selected.xcf
tiling/assets/raw/tilesets/: bridge_mask.xcf  bridge_normal.xcf  bridge_template.xcf  debug_mask.xcf  debug_template.xcf  dirt_mask.xcf  dirt_normal.xcf  dirt_template.xcf  water_mask.xcf  water_normal.xcf  water_template.xcf
tiling/assets/raw/tilesets_bak/: debug.xcf  debug_mask.xcf  dirt.xcf  grass.xcf  grass_mask.xcf
tiling/assets/squares/: selected.xcf
tiling/glium-example-assets/: readme.md
tiling/src/: lib.rs  tiling.rs  transforms.rs
tiling/src/engine/: mod.rs  transform.rs
tiling/src/world/: coordinate.rs  mod.rs
(+159 files in other folders)
