[package]
name = "hextile"
version = "0.1.0"
authors = ["justinpombrio <zallambo@gmail.com>"]

[lib]
name = "hextile"
path = "src/lib.rs"

[dependencies]
piston2d-glium_graphics = "0.25"
glium = "0.14"
freetype-rs = "0.8.0"
image = "0.10.0"
piston-shaders_graphics2d = "0.2.1"
piston2d-graphics = "0.16.0"
piston-texture = "0.4.0"
piston = "0.22.0"
shader_version = "0.2.0"
pistoncore-glutin_window = "0.26.0"
rand = "*"
texture_packer = "*"
