[package]
name = "parser-comp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "*", features = ["alloc"] }
parser-ll1 = { git = "https://github.com/justinpombrio/parser-ll1" }

[features]
flamegraphs = ["parser-ll1/flamegraphs"]
