[package]
name = "parser-ll1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
dyn-clone = "1.*"
no-nonsense-flamegraphs = { git = "https://github.com/justinpombrio/no-nonsense-flamegraphs.git", optional = true }
colored = "*"

[features]
flamegraphs = ["dep:no-nonsense-flamegraphs"]
