[package]
name = "hex"
version = "0.1.0"
authors = ["Justin Pombrio <zallambo@gmail.com>"]
edition = "2018"

[dependencies]
piston = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
#piston = "0.49.0"
#piston2d-graphics = "0.36.0"
#pistoncore-glutin_window = "0.63.0"
#piston2d-opengl_graphics = "0.72.0"
vecmath = "*"
image = "*"
glium = "*"

#pistoncore-glfw_window = "0.64"
#pistoncore-sdl2_window = "0.63"
